packages/svelte/tests/validator/samples/multiple-var-same-name/input.svelte
<script>
	var test = "";
	var test = 42;
</script>

{test}