packages/svelte/tests/compiler-errors/samples/export-not-defined-module-with-source/main.svelte
<script module>
	export { blah } from "./blah.js";
</script>
